Removed jdk-11 specific configuration options.