@@ -103,20 +103,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                --illegal-access=permit
-                            </argLine>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                --illegal-access=permit
-                            </argLine>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
